added new pages

--- a/electronpay/homepage/home.html
+++ b/electronpay/homepage/home.html
@@ -8,32 +8,27 @@
     <title>electronpay.com</title>
 </head>
 <body>
-
     <div class="support-section">
         <p> <i class="fas fa-paper-plane"></i> support@electronpay.solution</p>
     </div>
-
     <nav class="nav">
         <div class="nav-header">
             <a href="#home" id="brand-logo"><img src="images-logo/electronpay-logo.png" alt="electronpay.com"></a>
             <button class="nav-toggler"><i class="fas fa-bars"></i></button>
         </div>
-
         <div class="menu-nav">
             <ul class="menu-nav__list">
-                <li class="menu-nav__item"><a href="" class="menu-nav__link"> Products </a></li>
+                <li class="menu-nav__item"><a href="./receipts-list.html" class="menu-nav__link"> My Receipts </a></li>
                 <li class="menu-nav__item"><a href="" class="menu-nav__link"> Services </a></li>
                 <li class="menu-nav__item"><a href="#plans-pricing" class="menu-nav__link"> Plans & Pricing </a></li>
                 <li class="menu-nav__item"><a href="" class="menu-nav__link"> More </a></li>
             </ul>
-
             <div class="menu-btn">
                 <a href="" type="button" class="menu-btn__sign"> Sign in </a>
                 <a href="" type="button" class="menu-btn__sign"> Sign up </a>
             </div>
         </div>
     </nav>
-
     <header>
         <div class="catchphrases">
             <div class="brand-logo-rotate">
@@ -46,11 +41,8 @@
             <a href="" type="button" class="catchphrase-btn"> Register your free account </a>
         </div>
     </header>
-
     <section class="how-it-works">
-
     </section>
-
     <section id="plans-pricing" class="plans">
         <h3>PLANS</h3>
         <div class="plan-template">
@@ -61,7 +53,6 @@
                 <li>Receipt images are stored for <b>only</b> six months</li>
             </ul>
         </div>
-
         <div class="plan-template">
             <h5>FREE</h5>
             <ul class="functionalities">
@@ -70,7 +61,6 @@
                 <li>Receipt images are stored for <b>only</b> six months</li>
             </ul>
         </div>
-
         <div class="plan-template">
             <h5>FREE</h5>
             <ul class="functionalities">
@@ -79,21 +69,17 @@
                 <li>Receipt images are stored for <b>only</b> six months</li>
             </ul>
         </div>
-
     </section>
-
     <section id="" class="register-account">
         <div class="form-terms-policy">
             <h2> Would you want to try Electronpay Receipts </h2>
             <form action="#" class="register-form">
                 <input type="email" name="email" id="email" placeholder="Email">
-                <input type="password" name="password id="password" placeholder="Password">
+                <input type="password" name="password" id="password" placeholder="Password">
                 <a href="" type="submit" class="catchphrase-btn"> Create your free account </a>
             </form>
             <p>By signing up, you agree to our <a href="#">Terms of Use</a>  and <a href="#">Privacy Policy</a>.</p>
         </div>
     </section>
-
-    <script type="text/javascript" src="./home.js"></script>
 </body>
 </html>
