unified and all connected pages

--- a/electronpay/homepage/add-receipt.html
+++ b/electronpay/homepage/add-receipt.html
@@ -13,16 +13,16 @@
     </div>  
     <div class="nav-header-other">
         <button class="nav-toggler"><i class="fas fa-bars"></i></button>
-        <a href="#home" id="brand-logo"><img src="images-logo/electronpay-logo.png" alt="electronpay.com"></a>
+        <a href="./home.html" id="brand-logo"><img src="images-logo/electronpay-logo.png" alt="electronpay.com"></a>
     </div>
     <div class="container">
         <div class="menu-nav other-menu">
             <ul class="menu-nav__list">
                 <li class="menu-nav__item"><a href="./receipts-list.html" class="menu-nav__link"> My Receipts & Invoices </a></li>
                 <li class="menu-nav__item"><a href="./add-receipt.html" class="menu-nav__link"> Add Receipt/Invoice </a></li>
-                <li class="menu-nav__item"><a href="" class="menu-nav__link"> Services </a></li>
-                <li class="menu-nav__item"><a href="#plans-pricing" class="menu-nav__link"> Plans & Pricing </a></li>
-                <li class="menu-nav__item"><a href="" class="menu-nav__link"> More </a></li>
+                <li class="menu-nav__item"><a href="./home.html#services" class="menu-nav__link"> Services </a></li>
+                <li class="menu-nav__item"><a href="./home.html#plans-pricing" class="menu-nav__link"> Plans & Pricing </a></li>
+                <li class="menu-nav__item"><a href="#" class="menu-nav__link"> More </a></li>
             </ul>
             <div class="menu-btn">
                 <a href="" type="button" class="menu-btn__sign"> Log Out </a>
@@ -85,7 +85,7 @@
     <header>
         <div class="catchphrases">
             <div class="brand-logo-rotate">
-                <img src="/images-logo/electronpay-logo-detached-2.png" alt="" height="150px">
+                <img src="./images-logo/electronpay-logo-detached-2.png" alt="" height="150px">
                 <h5>ELECTRONPAY RECEIPTS</h5>
             </div>   
             <h2>Never loose details of your transactions. Import/include receipts with ease. Anyday, anytime, anywhere. </h2>
