--- a/electronpay/homepage/home.html
+++ b/electronpay/homepage/home.html
@@ -13,25 +13,25 @@
     </div>
     <nav class="nav">
         <div class="nav-header">
-            <a href="#home" id="brand-logo"><img src="images-logo/electronpay-logo.png" alt="electronpay.com"></a>
+            <a href="./home.html" id="brand-logo"><img src="./images-logo/electronpay-logo.png" alt="electronpay.com"></a>
             <button class="nav-toggler"><i class="fas fa-bars"></i></button>
         </div>
         <div class="menu-nav">
             <ul class="menu-nav__list">
                 <li class="menu-nav__item"><a href="#services" class="menu-nav__link"> How It Works </a></li>
                 <li class="menu-nav__item"><a href="#plans-pricing" class="menu-nav__link"> Plans & Pricing </a></li>
-                <li class="menu-nav__item"><a href="" class="menu-nav__link"> More </a></li>
+                <li class="menu-nav__item"><a href="#" class="menu-nav__link"> More </a></li>
             </ul>
             <div class="menu-btn">
-                <a href="" type="button" class="menu-btn__sign"> Sign in </a>
-                <a href="#signup" type="button" class="menu-btn__sign"> Sign up </a>
+                <a href="#signin" type="button" class="menu-btn__sign"> Sign in </a>
+                <a href="./signup.html" type="button" class="menu-btn__sign"> Sign up </a>
             </div>
         </div>
     </nav>
     <header>
         <div class="catchphrases">
             <div class="brand-logo-rotate">
-                <img src="/images-logo/electronpay-logo-detached-2.png" alt="" height="150px">
+                <img src="./images-logo/electronpay-logo-detached-2.png" alt="" height="150px">
                 <h5>ELECTRONPAY RECEIPTS</h5>
             </div>         
             <h2>Never loose details of your transactions. Import/include receipts with ease. Anyday, anytime, anywhere. </h2>
@@ -44,21 +44,21 @@
         <div class="how-it-works">
             <div class="how-templates">
                 <div>
-                    <img src="/images-logo/receipt-printed.png" alt="" height="150px">
+                    <img src="./images-logo/receipt-printed.png" alt="" height="150px">
                 </div>
                 <h3>Import/compute receipts anytime, anywhere</h3>
                 <p>Simply compute/complete details of your receipt using the electronpay receipt storing technology</p>
             </div>
             <div class="how-templates">
                 <div>
-                    <img src="/images-logo/green-checkmark.png" alt="" height="150px">
+                    <img src="./images-logo/green-checkmark.png" alt="" height="150px">
                 </div>
                 <h3>Review receipt information</h3>
                 <p> Here you check for accuracy of receipt information input before approving for storage in out database system</p>
             </div>
             <div class="how-templates">
                 <div>
-                    <img src="/images-logo/pdf-export.png" alt="" height="150px">
+                    <img src="./images-logo/pdf-export.png" alt="" height="150px">
                 </div>
                 <h3>Track and export your receipts </h3>
                 <p>Receipts can be edited, tracked for consistency and exported in various acceptable document formats. This way you will have accurate picture of your business expenses </p>
@@ -71,19 +71,18 @@
             <div class="plan-template">
                 <div class="plan-template__pricetag">
                     <h5>FREE</h5>
-                   <img src="/images-logo/plan-free.png" alt="FREE-PLAN" height="100px">
+                   <img src="./images-logo/plan-free.png" alt="FREE-PLAN" height="100px">
                 </div>          
                 <ul class="functionalities">
                     <li>Full Access (no export capability)</li>
                     <li>AD Supported</li>
                     <li>Receipts information are stored for <b>only</b> six months</li>
                 </ul>
-                <a href="" type="button" class="catchphrase-btn"> More Info </a>
             </div>    
             <div class="plan-template">
                 <div class="plan-template__pricetag">
                     <h5>SILVER</h5>
-                   <img src="/images-logo/plan-silver.png" alt="FREE-PLAN" height="100px">
+                   <img src="./images-logo/plan-silver.png" alt="FREE-PLAN" height="100px">
                    <p>$ 1.99</p>
                 </div>
                 <ul class="functionalities">
@@ -97,7 +96,7 @@
             <div class="plan-template">
                 <div class="plan-template__pricetag">
                     <h5>PREMIUM</h5>
-                    <img src="/images-logo/plan-premium.png" alt="FREE-PLAN" height="100px">
+                    <img src="./images-logo/plan-premium.png" alt="FREE-PLAN" height="100px">
                     <p>$ 3.49</p>
                 </div>
                 <ul class="functionalities">
@@ -110,19 +109,27 @@
             </div>
         </div>  
     </section>
-    <section id="signup" class="register-account">
+
+    <section id="signin" class="login-account">
         <div class="form-terms-policy">
-            <h2> Want to try Electronpay Receipts...?  </h2>
-            <form action="#" class="register-form">
+            <h2> Already have an account? Login to your dashboard below... </h2>
+
+            <form action="#" class="login-form">
                 <input type="email" name="email" id="email" placeholder="Email">
+                <span class="alert-text"></span>
+
                 <input type="password" name="password" id="password" placeholder="Password">
-                <a href="" type="submit" class="catchphrase-btn"> Create your free account </a>
+                <span class="alert-text"></span>
+
+                <button type="submit" class="catchphrase-btn"> Proceed </button>
             </form>
-            <p>By signing up, you agree to our <a href="#">Terms of Use</a>  and <a href="#">Privacy Policy</a>.</p>
+        
+            <p>Don't have an accout yet? Click <a href="#">here</a> to register</p>
         </div>
     </section>
+
     <footer class="footer">
-        <a href="#home" id="brand-logo"><img src="images-logo/electronpay-logo.png" alt="electronpay.com"></a>
+        <a href="#home" id="brand-logo"><img src="./images-logo/electronpay-logo.png" alt="electronpay.com"></a>
         <div> Copyright &copy; electronpay.com <span id="year"></span><br>
             All rights reserved
         </div>
