--- a/electronpay/add-receipt.html
+++ b/electronpay/add-receipt.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./home.css">
+    <link rel="stylesheet" type="text/css" href="./receipt.css">
     <link rel="stylesheet" href="library/fontawesome-free-5.14.0-web/css/all.min.css">
     <title>electronpay.com</title>
 </head>
@@ -99,5 +100,6 @@
         </div>
     </footer>
     <script type="text/javascript" src="./home.js"></script>
+    <script type="text/javascript" src="./receipt.js"></script>
 </body>
 </html>
