--- a/electronpay/receipt.html
+++ b/electronpay/receipt.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./home.css">
+    <link rel="stylesheet" type="text/css" href="./receipt.css">
     <link rel="stylesheet" href="library/fontawesome-free-5.14.0-web/css/all.min.css">
     <title>electronpay.com</title>
 </head>
@@ -32,6 +33,7 @@
             <div class="row">
                 <h2>Business Name: Wellington Supermaket & Pharmacy</h2>
                 <h3>Purchase Date: 11th of September, 2020</h3>
+                <h3>Type: Invoice</h3>
                 <br>
                 <table id="receipt-table">
                     <thead>
@@ -92,5 +94,6 @@
         </div>
     </footer>
     <script type="text/javascript" src="./home.js"></script>
+    <script type="text/javascript" src="./receipt.js"></script>
 </body>
 </html>
