added new folders

--- a/electronpay/receipt.html
+++ b/electronpay/receipt.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./home.css">
-    <link rel="stylesheet" type="text/css" href="./receipt.css">
+    <link rel="stylesheet" type="text/css" href="./css/home.css">
+    <link rel="stylesheet" type="text/css" href="./css/receipt.css">
     <link rel="stylesheet" href="library/fontawesome-free-5.14.0-web/css/all.min.css">
-    <title>electronpay.com</title>
+    <title>Receipt | electronpay.com</title>
 </head>
 <body>
     <div class="support-section">
@@ -93,7 +93,7 @@
             All rights reserved
         </div>
     </footer>
-    <script type="text/javascript" src="./home.js"></script>
-    <script type="text/javascript" src="./receipt.js"></script>
+    <script type="text/javascript" src="./js/home.js"></script>
+    <script type="text/javascript" src="./js/receipt.js"></script>
 </body>
 </html>
