--- a/electronpay/home.html
+++ b/electronpay/home.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./home.css">
+    <link rel="stylesheet" type="text/css" href="./css/home.css">
     <link rel="stylesheet" href="library/fontawesome-free-5.14.0-web/css/all.min.css">
-    <title>electronpay.com</title>
+    <title>Home | electronpay.com</title>
 </head>
 <body>
     <div class="support-section">
@@ -134,6 +134,6 @@
             All rights reserved
         </div>
     </footer>
-    <script type="text/javascript" src="./home.js"></script>
+    <script type="text/javascript" src="./js/home.js"></script>
 </body>
 </html>
