--- a/electronpay/signup.html
+++ b/electronpay/signup.html
@@ -7,38 +7,32 @@
 <meta name="Description" content="Enter your description here"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-<link rel="stylesheet" type="text/css" href="./home.css">
-<link rel="stylesheet" href="styles.css">
-
+<link rel="stylesheet" type="text/css" href="./css/home.css">
+<link rel="stylesheet" href="css/styles.css">
 <link rel="icon" href="./assets/network.png"/>
-<title>electronpay.com</title>
-
+<title>Sign Up | electronpay.com</title>
 </head>
 <body>
   <div class="support-section">
     <p> <i class="fas fa-paper-plane"></i> support@electronpay.com</p>
 </div>
-
 <nav class="nav">
     <div class="nav-header">
         <a href="./home.html" id="brand-logo"><img src="images-logo/electronpay-logo.png" alt="electronpay.com"></a>
         <button class="nav-toggler"><i class="fas fa-bars"></i></button>
     </div>
-
     <div class="menu-nav">
         <ul class="menu-nav__list">
             <li class="menu-nav__item"><a href="./home.html#services" class="menu-nav__link"> How It Works </a></li>
             <li class="menu-nav__item"><a href="./home.html#plans-pricing" class="menu-nav__link"> Plans & Pricing </a></li>
             <li class="menu-nav__item"><a href="#" class="menu-nav__link"> More </a></li>
         </ul>
-
         <div class="menu-btn">
             <a href="./home.html#signin" type="button" class="menu-btn__sign"> Sign in </a>
             <a href="#" type="button" class="menu-btn__sign"> Sign up </a>
         </div>
     </div>
 </nav>
-
 <div class="bg-signin">
 <div class="container">
 <div class="row">
@@ -48,8 +42,7 @@
          Sign Up
       </h1>
       <div class="">
-        <form action="" id="sign-in-form">
-          
+        <form action="" id="sign-in-form">        
         <div class="form-group pr-5 pl-5">
           <div class="input-group-prepend">
             <div class="input-group-text row pt-0  form1" id="inputGroup-sizing-sm">
@@ -58,8 +51,7 @@
                 <p class="error-block ml-5" style="font-size: 12px; color:red;"></p>
           </div>
         </div>
-        </div>
-        
+        </div>   
         <br>
           <div class="form-group pr-5 pl-5">
           <div class="input-group-prepend">
@@ -122,7 +114,6 @@
         </div>
         </div>
       </form>
-
        <div class="signup-link mt-5">
             <span class="d-inline-block text-right ml-5">
               Already have an Account?
@@ -135,9 +126,7 @@
     </div>
   </div>
 </div>
-
 </div>
-
 <header>
   <div class="catchphrases">
       <div class="brand-logo-rotate">
@@ -148,19 +137,15 @@
       <p>Its the computer age. Do away with manual tracking of expense(s) powered by our electronpay receipts web and mobile technologies</p>
   </div>
 </header>
-
 <footer class="footer">
   <a href="#home" id="brand-logo"><img src="images-logo/electronpay-logo.png" alt="electronpay.com"></a>
   <div> Copyright &copy; electronpay.com <span id="year"></span><br>
       All rights reserved
   </div>
 </footer>
-
-
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.0-alpha2/js/bootstrap.min.js"></script>
 <script src="./DOM/signup.js"></script>
-<script type="text/javascript" src="./home.js"></script>
+<script type="text/javascript" src="./js/home.js"></script>
 </body>
 </html>
