--- a/electronpay/homepage/home.html
+++ b/electronpay/homepage/home.html
@@ -36,7 +36,7 @@
             </div>         
             <h2>Never loose details of your transactions. Import/include receipts with ease. Anyday, anytime, anywhere. </h2>
             <p>Its the computer age. Do away with manual tracking of expense(s) powered by our electronpay receipts web and mobile technologies</p>
-            <a href="" type="button" class="catchphrase-btn"> Register your free account </a>
+            <a href="signup.html" type="button" class="catchphrase-btn"> Register your free account </a>
         </div>
     </header>
     <section id="services">
@@ -114,17 +114,17 @@
         <div class="form-terms-policy">
             <h2> Already have an account? Login to your dashboard below... </h2>
 
-            <form action="#" class="login-form">
+            <form action="login.php" method="POST" class="login-form">
                 <input type="email" name="email" id="email" placeholder="Email">
                 <span class="alert-text"></span>
 
                 <input type="password" name="password" id="password" placeholder="Password">
                 <span class="alert-text"></span>
-
+                
                 <button type="submit" class="catchphrase-btn"> Proceed </button>
             </form>
         
-            <p>Don't have an accout yet? Click <a href="#">here</a> to register</p>
+            <p>Don't have an accout yet? Click <a href="signup.html">here</a> to register</p>
         </div>
     </section>
 
