--- a/electronpay/homepage/receipts-list.html
+++ b/electronpay/homepage/receipts-list.html
@@ -40,12 +40,12 @@
                         <thead>
                             <tr>
                                 <th>Business Name</th>
-                                <th>Purchase Date</th>
+                                <th>Client Name</th>
+                                <th>Transaction Date</th>
+                                <th>Address</th>
                                 <th>Phone Number</th>
                                 <th>Email</th>
-                                <th>Number of Items Bought</th>
-                                <th>Type</th>
-                                <th>Due Date</th>
+                                <th>Transaction Type</th>
                                 <th>Total Amount</th>
                                 <td></td>
                             </tr>
