--- a/electronpay/homepage/signup.html
+++ b/electronpay/homepage/signup.html
@@ -48,13 +48,13 @@
          Sign Up
       </h1>
       <div class="">
-        <form action="" id="sign-in-form">
+        <form action="register.php" method="POST" id="sign-in-form">
           
         <div class="form-group pr-5 pl-5">
           <div class="input-group-prepend">
             <div class="input-group-text row pt-0  form1" id="inputGroup-sizing-sm">
-             <label for="exampleInputEmail1" class="col-12 col-md-12 text-left pl-0 pt-1">Full-Name<span style="color: red;">*</span></label>
-                <input type="text" class="form-control col-12 col-md-12" id="fullName"  placeholder="Full-Name">
+             <label for="first_name" class="col-12 col-md-12 text-left pl-0 pt-1">First Name<span style="color: red;">*</span></label>
+                <input type="text" class="form-control col-12 col-md-12" id="fullName"  placeholder="First Name" name="first_name">
                 <p class="error-block ml-5" style="font-size: 12px; color:red;"></p>
           </div>
         </div>
@@ -64,8 +64,19 @@
           <div class="form-group pr-5 pl-5">
           <div class="input-group-prepend">
             <div class="input-group-text row pt-0 form1" id="inputGroup-sizing-sm">
-              <label for="exampleInputEmail1" class="col-12 col-md-12 text-left pl-0 pt-1">Username<span style="color: red;">*</span></label>
-                <input type="text" class="form-control col-12 col-md-12" id="userName" placeholder="username">
+              <label for="last_name" class="col-12 col-md-12 text-left pl-0 pt-1">Last Name<span style="color: red;">*</span></label>
+                <input type="text" class="form-control col-12 col-md-12" id="userName" placeholder="Last Name" name="last_name">
+                <p class="error-block ml-5" style="font-size: 12px; color: red;"></p>
+          </div>
+        </div>
+        </div>
+    
+        <br>
+          <div class="form-group pr-5 pl-5">
+          <div class="input-group-prepend">
+            <div class="input-group-text row pt-0 form1" id="inputGroup-sizing-sm">
+              <label for="username" class="col-12 col-md-12 text-left pl-0 pt-1">Username<span style="color: red;">*</span></label>
+                <input type="text" class="form-control col-12 col-md-12" id="userName" placeholder="username" name="username">
                 <p class="error-block ml-5" style="font-size: 12px; color: red;"></p>
           </div>
         </div>
@@ -74,8 +85,8 @@
             <div class="form-group pr-5 pl-5">
           <div class="input-group-prepend">
             <div class="input-group-text row pt-0 form1" id="inputGroup-sizing-sm">
-              <label for="exampleInputEmail1" class="col-12 col-md-12 text-left pl-0 pt-1">Email<span style="color: red;">*</span></label>
-                <input type="email" class="form-control col-12 col-md-12" id="email" aria-describedby="emailHelp" placeholder="email">
+              <label for="email" class="col-12 col-md-12 text-left pl-0 pt-1">Email<span style="color: red;">*</span></label>
+                <input type="email" class="form-control col-12 col-md-12" id="email" aria-describedby="emailHelp" placeholder="email" name="email">
                 <p class="error-block ml-5" style="font-size: 12px; color: red;"></p>
           </div>
         </div>
@@ -84,8 +95,8 @@
            <div class="form-group pr-5 pl-5">
           <div class="input-group-prepend">
             <div class="input-group-text row pt-0 form1" id="inputGroup-sizing-sm">
-              <label for="exampleInputEmail1" class="col-12 col-md-12 text-left pl-0 pt-1">Phone-number<span style="color: red;">*</span></label>
-                <input type="password" class="form-control col-12 col-md-12" id="phone"  placeholder="Phone">
+              <label for="phone" class="col-12 col-md-12 text-left pl-0 pt-1">Phone-number<span style="color: red;">*</span></label>
+                <input type="text" class="form-control col-12 col-md-12" id="phone"  placeholder="Phone" name="phone">
                 <p class="error-block ml-5" style="font-size: 12px; color: red;"></p>
           </div>
         </div>
@@ -94,8 +105,8 @@
            <div class="form-group pr-5 pl-5">
           <div class="input-group-prepend">
             <div class="input-group-text row pt-0 form1" id="inputGroup-sizing-sm">
-              <label for="exampleInputEmail1" class="col-12 col-md-12 text-left pl-0 pt-1">Password<span style="color: red;">*</span></label>
-                <input type="text" class="form-control col-12 col-md-12" id="password" placeholder="password">
+              <label for="pass_word" class="col-12 col-md-12 text-left pl-0 pt-1">Password<span style="color: red;">*</span></label>
+                <input type="password" class="form-control col-12 col-md-12" id="password" placeholder="password" name="pass_word">
                 <p class="error-block ml-5" style="font-size: 12px; color: red;"></p>
           </div>
         </div>
@@ -104,8 +115,8 @@
            <div class="form-group pr-5 pl-5">
           <div class="input-group-prepend">
             <div class="input-group-text row pt-0 form1" id="inputGroup-sizing-sm">
-              <label for="exampleInputEmail1" class="col-12 col-md-12 text-left pl-0 pt-1">Confirm-Password<span style="color: red;">*</span></label>
-                <input type="text" class="form-control col-12 col-md-12" id="Confirm-Password"  placeholder="Confirm-Password">
+              <label for="confirm_password" class="col-12 col-md-12 text-left pl-0 pt-1">Confirm-Password<span style="color: red;">*</span></label>
+                <input type="password" class="form-control col-12 col-md-12" id="Confirm-Password"  placeholder="Confirm-Password" name="confirm_password">
                 <p class="error-block ml-5" style="font-size: 12px; color: red;"></p>
           </div>
         </div>
