--- a/electronpay/signup.html
+++ b/electronpay/signup.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
 <link rel="stylesheet" type="text/css" href="./css/home.css">
 <link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="css/signup.css">
 <link rel="icon" href="./assets/network.png"/>
 <title>Sign Up | electronpay.com</title>
 </head>
@@ -38,7 +39,7 @@
 <div class="row">
   <div class="col-md-6 mx-auto col-lg-6 col-sm-6 col-xs-6">
     <div class="card text-center mt-5 bg-light shadow rounded br-3">
-      <h1 class="heading display-5 pb-3">
+      <h1 class="heading display-6 pb-3">
          Sign Up
       </h1>
       <div class="">
@@ -118,7 +119,7 @@
             <span class="d-inline-block text-right ml-5">
               Already have an Account?
             </span>
-           <a href="./log-in.html" class="d-inline-block float-right mr-5"> <span class="sign-up">
+           <a href="./home.html#signin" class="d-inline-block float-right mr-5"> <span class="sign-up">
               Login Here
             </span></a>
           </div>
