--- a/electronpay/home.html
+++ b/electronpay/home.html
@@ -11,6 +11,7 @@
     <div class="support-section">
         <p> <i class="fas fa-paper-plane"></i> support@electronpay.com</p>
     </div>
+
     <nav class="nav">
         <div class="nav-header">
             <a href="./home.html" id="brand-logo"><img src="./images-logo/electronpay-logo.png" alt="electronpay.com"></a>
@@ -28,17 +29,21 @@
             </div>
         </div>
     </nav>
+
     <header>
         <div class="catchphrases">
             <div class="brand-logo-rotate">
-                <img src="./images-logo/electronpay-logo-detached-2.png" alt="" height="150px">
+                <img src="./images-logo/electronpay-logo-detached-2.png" alt="ELECTRONPAY.COM" height="150px">
                 <h5>ELECTRONPAY RECEIPTS</h5>
             </div>         
             <h2>Never loose details of your transactions. Import/include receipts with ease. Anyday, anytime, anywhere. </h2>
             <p>Its the computer age. Do away with manual tracking of expense(s) powered by our electronpay receipts web and mobile technologies</p>
-            <a href="" type="button" class="catchphrase-btn"> Register your free account </a>
+            <a href="./signup.html" type="button" class="catchphrase-btn"> Register your free account </a>
+            <!-- <b> OR </b> -->
+            <a href="#signin" type="button" class="catchphrase-btn"> Login </a>
         </div>
     </header>
+
     <section id="services">
         <h3 class="section-title">HOW IT WORKS</h3>
         <div class="how-it-works">
@@ -54,17 +59,18 @@
                     <img src="./images-logo/green-checkmark.png" alt="" height="150px">
                 </div>
                 <h3>Review receipt information</h3>
-                <p> Here you check for accuracy of receipt information input before approving for storage in out database system</p>
+                <p> Check for accuracy of your receipt information as inputed before approving for storage in our database system</p>
             </div>
             <div class="how-templates">
                 <div>
                     <img src="./images-logo/pdf-export.png" alt="" height="150px">
                 </div>
                 <h3>Track and export your receipts </h3>
-                <p>Receipts can be edited, tracked for consistency and exported in various acceptable document formats. This way you will have accurate picture of your business expenses </p>
+                <p>Receipts can be edited, tracked for consistency and exported in various acceptable document formats. This way you will have a accurate picture of your business expenses </p>
             </div>
         </div>
     </section>
+
     <section id="plans-pricing">
         <h3 class="section-title">PLANS & PRICING</h3>
         <div class="plans-and-pricing">
@@ -121,10 +127,10 @@
                 <input type="password" name="password" id="password" placeholder="Password">
                 <span class="alert-text"></span>
 
-                <button type="submit" class="catchphrase-btn"> Proceed </button>
+                <button type="submit" class="catchphrase-btn"> Proceed to login </button>
             </form>
         
-            <p>Don't have an accout yet? Click <a href="#">here</a> to register</p>
+            <p>Don't have an accout yet? Click <a href="./signup.html">here</a> to register</p>
         </div>
     </section>
 
@@ -134,6 +140,7 @@
             All rights reserved
         </div>
     </footer>
+
     <script type="text/javascript" src="./js/home.js"></script>
 </body>
 </html>
